--- a/report_html_db/HTML_DIR/root/html_dir/search-database/gene.tt
+++ b/report_html_db/HTML_DIR/root/html_dir/search-database/gene.tt
@@ -2,11 +2,9 @@
 <div class="panel panel-default result">
 	<div class="panel-heading">
 		<div class="panel-title">
-			<a class="result-panel-title" data-toggle="collapse" data-parent="#accordion" href="#[% result.feature_id %]">[% result.name %] - [% result.uniquename %]</a>
+			<a id="result-panel-title-[% result.feature_id %]" data-toggle="collapse" data-parent="#accordion" href="#[% result.feature_id %]">[% result.name %] - [% result.uniquename %]</a>
 		</div>
 	</div>
-	<div id="[% result.feature_id %]" class="panel-collapse collapse">
-		<div class="panel-body">
-		</div>
+	<div id="[% result.feature_id %]" class="panel-body collapse">
 	</div>
 </div>
