--- a/report_html_db/teste_diretorio/db/saida_db/website/root/website/search-database/sequence.tt
+++ b/report_html_db/teste_diretorio/db/saida_db/website/root/website/search-database/sequence.tt
@@ -6,6 +6,10 @@
 		</div>
 	</div>
 	<div id="sequence-[% result.feature_id %]" class="panel-body collapse sequence">
-		[% result.sequence %]
+		<div class="row">
+			<div class="col-md-12">
+				[% result.sequence %]
+			</div>
+		</div>
 	</div>
 </div>
